# llm-kernel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EMBEDDING_MODELS.md  LICENSE  Makefile  PROGRESS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  semver.yml
benches/: compute_bench.rs  concurrency_bench.rs  graph_bench.rs  scale_bench.rs
crates/llm-kernel-vector-index/: CHANGELOG.md  Cargo.toml  README.md
crates/llm-kernel-vector-index/benches/: bench.rs
crates/llm-kernel-vector-index/src/: lib.rs  turbovec_index.rs
docs/: features.md  security-audit-2026-07.md
docs/benchmarks/: README.md  compute.md  graph.md  graph_concurrency.md  korean-recall.md  scale.md
docs/i18n/de/: README.md
docs/i18n/es/: README.md
docs/i18n/fr/: README.md
docs/i18n/it/: README.md
docs/i18n/ja/: README.md
docs/i18n/ko/: README.md
docs/i18n/pt/: README.md
docs/i18n/ru/: README.md
docs/i18n/zh-Hans/: README.md
docs/i18n/zh-Hant/: README.md
docs/research/: fts5_cjk_alternatives.md  future_roadmap_evaluation.md  graph_performance_strategy.md  roadmap_evaluation.md
eval/: baseline.json
eval/datasets/: build_korean_corpus.py  graph.jsonl  graph_korean_corpus.jsonl  graph_korean_queries.jsonl  safety.jsonl  search.jsonl  tokens.jsonl
examples/: chat_openai.rs  provider_list.rs  stream_anthropic.rs
src/: error.rs  lib.rs  prelude.rs
src/config/: loader.rs  mod.rs  template.rs
src/discovery/: mod.rs  models_dev.rs  ollama.rs  openai_compat.rs  source.rs
src/embedding/: async_vector_index.rs  catalog.rs  elastic.rs  fastembed.rs  lazy.rs  mod.rs  nomic_moe.rs  openai.rs  pgvector.rs  qdrant.rs  qwen3.rs  turbovec.rs  types.rs  vector_index.rs
src/graph/: async_graph.rs  async_pool.rs  backend.rs  cjk.rs  dedup.rs  lifecycle.rs  mod.rs  pg.rs  recall.rs  schema.rs  search.rs  sqlx_pg.rs  store.rs  traversal.rs  types.rs
src/graph/algo/: community.rs  csr.rs  mod.rs  pagerank.rs  path.rs  similarity.rs
src/install/: mod.rs  wizard.rs
src/llm/: cache.rs  client.rs  history.rs  json_extract.rs  middleware.rs  mod.rs  prompt.rs  retry.rs  router.rs  template.rs  tool.rs  types.rs
src/mcp/: auth.rs  http.rs  mod.rs  schema.rs  server.rs  transport.rs
src/provider/: capability.rs  catalog.json  catalog.rs  mapping.rs  mod.rs  sync.rs
src/safety/: classify.rs  injection.rs  mod.rs  sanitize.rs
src/search/: federation.rs  fusion.rs  mod.rs  provider.rs  rrf.rs  types.rs
src/secrets/: atomic.rs  mod.rs  vault.rs
src/store/: kv.rs  mod.rs  schema_version.rs  sqlite.rs
src/telemetry/: events.rs  mod.rs  sink.rs
src/tokens/: budget.rs  chunk.rs  mod.rs
tests/: feature_gates.rs
